Fixed z-index of navbar, made some changes to the home page.

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 /* NavBar Styling Override */
 .navbar {
+  z-index: 1;
   position: sticky;
   top: 0;
 }
